--- a/index.html
+++ b/index.html
@@ -4,14 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+
+    <link href="style.css" rel="stylesheet">
+
+    <script src="script.js" defer>
+    </script>
+
+
 </head>
 
 <body>
 
-    <script src="script.js">
-    </script>
 
+    <div id="container">
+
+        <div id="scoreContainer">
+
+            <div id="playerScoreContainer">
+                <Span style="font-weight:bold;">Player score:</Span>
+                <span id = "playerScore">#123</span>
+            </div>
+
+            <div id="computerScoreContainer">
+                <Span style="font-weight:bold;">Computer score:</Span>
+                <span id = "computerScore">#123</span>
+            </div>
+        </div>
+
+
+         <div id="playroundContainer">
+
+                <div id="roundNumberContainer">
+                    <Span>Round number:</Span>
+                    <span id = "roundNumber">#123</span>
+                </div>
+
+                <div id="resultContainer">
+                    <Span>Result: winner:</Span>
+                    <span id = "resultWinner">xyz</span>
+                    </div>
+
+         </div>
+
+
+
+         <div id="buttonContainer">
+            <button id="rock">Rock</button>
+            <button id="paper">Paper</button>
+            <button id="scissors">Scissors</button>
+         </div>
+
+
+    </div>
+
+
+    <div id="results">
+
+    </div>
 
     
+
 </body>
-</html>
+</html> 
