--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
 
             <div id="playerScoreContainer">
                 <Span style="font-weight:bold;">Player score:</Span>
-                <span id = "playerScore">#123</span>
+                <span id = "playerScore">0</span>
             </div>
 
             <div id="computerScoreContainer">
                 <Span style="font-weight:bold;">Computer score:</Span>
-                <span id = "computerScore">#123</span>
+                <span id = "computerScore">0</span>
             </div>
         </div>
 
@@ -36,14 +36,16 @@
          <div id="playroundContainer">
 
                 <div id="roundNumberContainer">
+                    <Span>The first to reach score of 5 will be the winnner. </Span>
+                    <br><br>
                     <Span>Round number:</Span>
-                    <span id = "roundNumber">#123</span>
+                    <span id = "roundNumber">0</span>
                 </div>
 
-                <div id="resultContainer">
-                    <Span>Result: winner:</Span>
-                    <span id = "resultWinner">xyz</span>
-                    </div>
+                    <br>
+                    <Span id="result"></Span>
+                    <Span id="winner" style="font-size:30px;"></Span>
+              
 
          </div>
 
